# sparse-map

./: CMakeLists.txt  Dockerfile  build-base-image.sh  build-image.sh  config.yaml  run.sh
base_image/: Dockerfile
src/: CMakeLists.txt  test_sparse_map.cpp
src/py-sparse-map/: env.py  generate-data.py  io_functions.py  read-data.py  setup.py  ts_pp.py  util.py  window_function.py
src/py-sparse-map/analysis/: phase_portrait.py  phase_portrait_example.py
src/py-sparse-map/feat_poc/: poc.py
src/py-sparse-map/fista_model/: _conv_test.py  _ista.py  fista.py  fista_example.py  ista.py  ld.py  main_poc.py  model.py
src/py-sparse-map/keras/: example.py  test.py
src/py-sparse-map/lca_model/: hist_rnn.py  lca_outlier_detection.py  lca_scalar_weight_surface.py  lca_spike.py  lca_ts.py  model.py
src/py-sparse-map/lca_model_np/: main.py  model.py
src/py-sparse-map/mnist/: test_c.py
src/py-sparse-map/of/: dataset.py  fa_toy_poc.py  model.py  model_prev.py  sandbox.py  simple_sparse_test.py  simple_test.py  stat.lst  sym.py  test.py  toy_dataset_sparse.py
src/py-sparse-map/rica/: poc.py
src/py-sparse-map/rpca/: main.py  playground.py  rpca_baseline.py  rpca_util.py  sparse_pca.py  util.py
src/py-sparse-map/spca/: con_grad_u.py
src/py-sparse-map/tf_model/: *REPL* [python]  _ista.py  conv_test.py  fista.py  fista_example.py  ista.py  lca_poc.py  lca_spike.py
src/sparse-map/: io_functions.cpp  io_functions.h  model.cpp  model.h
src/sparse-map-base/: error.h  log.cpp  log.h
src/sparse_map/: common.h  model.h
